--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap');
+
+:root {
+    --primary-font: 'Karla', sans-serif;
+}
 
 
 .attribution { font-size: 11px; text-align: center; }
