--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,10 @@
 
 :root {
     --primary-font: 'Karla', sans-serif;
+    --cyan: hsl(179, 62%, 43%);
+    --bright-yellow: hsl(71, 73%, 54%);
+    --light-gray: hsl(204, 43%, 93%);
+    --grayish-blue: hsl(218, 22%, 67%);
 }
 
 
