--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,124 @@
     --grayish-blue: hsl(218, 22%, 67%);
 }
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
-.attribution { font-size: 11px; text-align: center; }
-.attribution a { color: hsl(228, 45%, 44%); }
+body {
+    font-family: var(--primary-font);
+    font-size: 16px;
+    background-color: var(--light-gray);
+    color: var(--light-gray);
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+h1, h2 {
+    font-weight: 700;
+    margin-bottom: 20px;
+}
+
+p {
+    font-weight: 400;
+    line-height: 1.4;
+    text-align: left;
+}
+
+button {
+    background-color: var(--bright-yellow);
+    border: none;
+    border-radius: 6px;
+    width: 100%;
+    padding: 15px 0;
+    color: var(--light-gray);
+    /* box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px; */
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    font-family: var(--primary-font);
+    font-weight: 700;
+    margin-top: 35px;
+}
+
+
+.main_block {
+    max-width: 700px;
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    /* box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; */
+}
+
+.join_block {
+    background-color: #fff;
+    width: 100%;
+    padding: 40px;
+}
+
+.join_block h1 {
+    color: var(--cyan);
+}
+
+.join_block h2 {
+    color: var(--bright-yellow);
+    margin-bottom: 15px;
+}
+
+.join_block p {
+    color: var(--grayish-blue);
+}
+.down_container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.subscription_block {
+    background-color: var(--cyan);
+    width: 50%;
+    padding: 40px;
+}
+
+.price {
+    font-size: 25px;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+
+.price span {
+    font-weight: 400;
+    color: hsl(204, 43%, 93%, 0.7);
+    font-size: 16px;
+}
+
+.why_us_block {
+    background-color: hsl(179, 62%, 43%, 0.8);
+    width: 50%;
+    padding: 40px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* FOOTER */
+/* .attribution { font-size: 11px; text-align: center; }
+.attribution a { color: hsl(228, 45%, 44%); } */
